--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
 
         <activity android:name=".ShareActivity"
-            android:theme="@style/Theme.AppCompat.Translucent">
+            android:theme="@style/OverlayTheme">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
